--- a/src/main/resources/view/login-view.fxml
+++ b/src/main/resources/view/login-view.fxml
@@ -3,17 +3,21 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="10" xmlns="http://javafx.com/javafx/17"
+<VBox alignment="CENTER" spacing="10"
+      xmlns="http://javafx.com/javafx/17"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="hotelmanagement.controller.LoginController"
-      stylesheets="@../style/login.css"
-      padding="20">
+      fx:controller="hotelmanagement.controller.LoginController">
 
-    <Label text="Hotel Management System" style="-fx-font-size: 22; -fx-font-weight: bold;"/>
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
+
+    <Label text="Hotel Management System"
+           style="-fx-font-size: 22; -fx-font-weight: bold;"/>
 
     <TextField fx:id="emailField" promptText="Email" prefWidth="250"/>
     <PasswordField fx:id="passwordField" promptText="Password" prefWidth="250"/>
