--- a/src/main/resources/view/admin-view.fxml
+++ b/src/main/resources/view/admin-view.fxml
@@ -8,7 +8,7 @@
 <VBox alignment="CENTER" spacing="20"
       xmlns="http://javafx.com/javafx/17"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="hotelmanagement.controller.AdminController">
+      fx:controller="hotelmanagement.controller.AdminDashboardController">
 
     <padding>
         <Insets top="20" right="20" bottom="20" left="20"/>
