--- a/src/main/resources/view/admin-dashboard.fxml
+++ b/src/main/resources/view/admin-dashboard.fxml
@@ -9,13 +9,27 @@
             fx:controller="hotelmanagement.controller.AdminDashboardController">
 
     <left>
-        <VBox spacing="15" alignment="TOP_CENTER" style="-fx-background-color:#2C3E50; -fx-padding:20;">
-            <Label text="Admin Panel" style="-fx-text-fill: white; -fx-font-size: 20;"/>
-            <Button text="Users" fx:id="btnUsers" style="-fx-pref-width:150;"/>
-            <Button text="Rooms" fx:id="btnRooms" style="-fx-pref-width:150;"/>
-            <Button text="Reservations" fx:id="btnReservations" style="-fx-pref-width:150;"/>
-            <Button text="Services" fx:id="btnServices" style="-fx-pref-width:150;"/>
-            <Button text="Logout" fx:id="btnLogout" style="-fx-pref-width:150; -fx-text-fill: red;"/>
+        <VBox spacing="15" alignment="TOP_CENTER"
+              style="-fx-background-color:#2C3E50; -fx-padding:20;">
+
+            <Label text="Admin Panel"
+                   style="-fx-text-fill: white; -fx-font-size: 20;"/>
+
+            <Button text="Users" fx:id="btnUsers" style="-fx-pref-width:150;"
+                    onAction="#openManageUsers"/>
+
+            <Button text="Rooms" fx:id="btnRooms" style="-fx-pref-width:150;"
+                    onAction="#openManageRooms"/>
+
+            <Button text="Reservations" fx:id="btnReservations" style="-fx-pref-width:150;"
+                    onAction="#openManageReservations"/>
+
+            <Button text="Services" fx:id="btnServices" style="-fx-pref-width:150;"
+                    onAction="#openManageServices"/>
+
+            <Button text="Logout" fx:id="btnLogout" style="-fx-pref-width:150; -fx-text-fill: red;"
+                    onAction="#logout"/>
+
         </VBox>
     </left>
 
