--- a/src/main/resources/view/manage-reservations-view.fxml
+++ b/src/main/resources/view/manage-reservations-view.fxml
@@ -3,14 +3,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox spacing="15" alignment="CENTER" xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="hotelmanagement.controller.ReservationFormController">
+<VBox spacing="15" alignment="CENTER"
+      xmlns="http://javafx.com/javafx/17"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="hotelmanagement.controller.ManageReservationsController">
 
-    <Label text="Manage Reservations"
+<Label text="Manage Reservations"
            style="-fx-font-size: 28; -fx-font-weight: bold;"/>
 
-    <TableView fx:id="reservationsTable" prefHeight="450" prefWidth="900">
+    <TableView fx:id="reservationTable" prefHeight="450" prefWidth="900">
         <columns>
             <TableColumn text="ID" fx:id="colId" prefWidth="60"/>
             <TableColumn text="Client" fx:id="colClient" prefWidth="150"/>
